--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "clipboard": "^2.0.11",
+    "clipboard-all": "^1.0.8",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.13",
     "jquery": "^3.7.0",
     "json-server": "^0.17.3",
+    "prismjs": "^1.29.0",
     "vue": "^2.6.14",
+    "vue-prism-editor": "^1.3.0",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
