--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "data": "json-server --watch data/data.json --port 3008"
   },
   "dependencies": {
     "axios": "^1.4.0",
